infra/network-policies/allow/allow-argocd-egress.yaml
# Allow ArgoCD to sync with Git repo
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-argocd-egress
  namespace: argocd
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: cert-manager
      ports:
        - protocol: TCP
          port: 443
    - to: []  # GitHub API
      ports:
        - protocol: TCP
          port: 443
    - to: []  # Docker registry
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 5000
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
