infra/network-policies/allow/allow-authelia-traefik.yaml
# Allow Authelia to communicate with Traefik (ForwardAuth)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-authelia-traefik
  namespace: auth
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: traefik
      ports:
        - protocol: TCP
          port: 9091
