infra/network-policies/allow/allow-cert-manager-acme.yaml
# Allow Cert-Manager ACME HTTP-01
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cert-manager-acme
  namespace: cert-manager
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: traefik
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8081
