infra/network-policies/allow/allow-linkerd-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linkerd-allow-webhook
  namespace: linkerd
  labels:
    app.kubernetes.io/name: linkerd
    policy-type: allow
spec:
  podSelector:
    matchLabels:
      linkerd.io/control-plane-component: proxy-injector
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 443
