infra/network-policies/allow/allow-portainer-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: portainer-allow-dns
  namespace: portainer
  labels:
    app.kubernetes.io/name: portainer
    policy-type: allow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: portainer
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
