infra/network-policies/allow/allow-portainer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: portainer-allow-ingress
  namespace: portainer
  labels:
    app.kubernetes.io/name: portainer
    policy-type: allow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: portainer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9443
