infra/network-policies/allow/allow-redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-ingress
  namespace: databases
  labels:
    app.kubernetes.io/name: redis
    policy-type: allow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apps
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 6379
